--- a/sass/site/navigation/_primary-menu.scss
+++ b/sass/site/navigation/_primary-menu.scss
@@ -7,6 +7,7 @@
 	text-align: center;
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
+	vertical-align: middle;
 }
 
 .ast-search-icon .astra-search-icon {
